--- a/web/fontello/css/fontello.css
+++ b/web/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?78028521');
-  src: url('../font/fontello.eot?78028521#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?78028521') format('woff'),
-       url('../font/fontello.ttf?78028521') format('truetype'),
-       url('../font/fontello.svg?78028521#fontello') format('svg');
+  src: url('../font/fontello.eot?68159512');
+  src: url('../font/fontello.eot?68159512#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?68159512') format('woff'),
+       url('../font/fontello.ttf?68159512') format('truetype'),
+       url('../font/fontello.svg?68159512#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?78028521#fontello') format('svg');
+    src: url('../font/fontello.svg?68159512#fontello') format('svg');
   }
 }
 */
@@ -44,13 +44,12 @@
   margin-left: .2em;
  
   /* you can be more comfortable with increased icons size */
-   font-size: 140%; 
+  /* font-size: 120%; */
  
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-dollar:before { content: '\e801'; } /* '' */
-.icon-money:before { content: '\e800'; } /* '' */
-.icon-money-1:before { content: '\e802'; } /* '' */
-.icon-wallet:before { content: '\e803'; } /* '' */
+.icon-bitcoin:before { content: '\e800'; } /* '' */
+.icon-dollar:before { content: '\e802'; } /* '' */
+.icon-bitcoin-1:before { content: '\e801'; } /* '' */
